fixing overflow issue

--- a/gen.css
+++ b/gen.css
@@ -3,6 +3,7 @@ body, html {
     padding: 0;
     margin: 0;
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 a{
